# simple_stupid_bot

./: CuEFa.py  CuEFa.ui  buttons.py  custom_types.py  main.py  messages.py  pyproject.toml  statistic.py
